tests/data/placebo/test_elasticache_security_group/elasticache.ListTagsForResource_2.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "0a0fe068-a46a-11e6-bb85-03b053041c22", 
            "HTTPHeaders": {
                "x-amzn-requestid": "0a0fe068-a46a-11e6-bb85-03b053041c22", 
                "date": "Sun, 06 Nov 2016 21:43:22 GMT", 
                "content-length": "301", 
                "content-type": "text/xml"
            }
        }, 
        "TagList": []
    }
}
