tests/data/placebo/test_elasticache_security_group/elasticache.ListTagsForResource_3.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "0a6af91b-a46a-11e6-80e1-830a4ed10d0e", 
            "HTTPHeaders": {
                "x-amzn-requestid": "0a6af91b-a46a-11e6-80e1-830a4ed10d0e", 
                "date": "Sun, 06 Nov 2016 21:43:22 GMT", 
                "content-length": "301", 
                "content-type": "text/xml"
            }
        }, 
        "TagList": []
    }
}
