tests/data/placebo/test_elasticache_security_group/iam.ListRoles_1.json
{
    "status_code": 200, 
    "data": {
        "Marker": "ADDBmWetZRC+k7Cgg5ojxwVfCCAmcWC+5BVkKcg2zDvSNFm7kbX+SqWpKvCzFKUUfNiHND4FWbHkRBlRaequlnsc", 
        "IsTruncated": true, 
        "Roles": [
            {
                "AssumeRolePolicyDocument": "%7B%22Version%22%3A%222012-10-17%22%2C%22Statement%22%3A%5B%7B%22Effect%22%3A%22Allow%22%2C%22Principal%22%3A%7B%22Service%22%3A%22ec2.amazonaws.com%22%7D%2C%22Action%22%3A%22sts%3AAssumeRole%22%7D%5D%7D", 
                "RoleId": "AROAI7ZS26HIW5UKQGHRM", 
                "CreateDate": {
                    "hour": 19, 
                    "__class__": "datetime", 
                    "month": 10, 
                    "second": 43, 
                    "microsecond": 0, 
                    "year": 2016, 
                    "day": 29, 
                    "minute": 39
                }, 
                "RoleName": "CloudCustodianRole", 
                "Path": "/", 
                "Arn": "arn:aws:iam::644160558196:role/CloudCustodianRole"
            }
        ], 
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "09beda40-a46a-11e6-8ae6-815287b1505d", 
            "HTTPHeaders": {
                "x-amzn-requestid": "09beda40-a46a-11e6-8ae6-815287b1505d", 
                "date": "Sun, 06 Nov 2016 21:43:21 GMT", 
                "content-length": "947", 
                "content-type": "text/xml"
            }
        }
    }
}
