tests/data/placebo/test_elasticache_security_group/tagging.GetResources_1.json
{
    "status_code": 200, 
    "data": {
        "PaginationToken": "", 
        "ResourceTagMappingList": [], 
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "7bd0bf39-5882-11e7-992f-c7e25da019df", 
            "HTTPHeaders": {
                "x-amzn-requestid": "7bd0bf39-5882-11e7-992f-c7e25da019df", 
                "date": "Sat, 24 Jun 2017 02:11:50 GMT", 
                "content-length": "50", 
                "content-type": "application/x-amz-json-1.1"
            }
        }
    }
}
